--- a/templates/starter/index.html
+++ b/templates/starter/index.html
@@ -10,6 +10,7 @@
     <script src="{% static "jquery.js" %}"></script>
     <script src="{% static "moment.min.js" %}"></script>
     <script src="{% static "ReactRouter.min.js" %}"></script>
+    <script src="{% static "react-markdown.js" %}"></script>
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,700" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="{% if debug %}{%  static "dist/dev/bundle.js" %}{% else %}{% static "dist/bundle.js" %}{% endif %}" charset="utf-8"></script>
