--- a/templates/starter/capture.html
+++ b/templates/starter/capture.html
@@ -2,6 +2,6 @@
 
 {% block content %}
     <script defer>
-        StarterRenderers.AppRenderer({{ props|safe }})
+        StarterRenderers.CaptureRenderer({{ props|safe }})
     </script>
 {% endblock content %}
