--- a/starter/static/css/main.css
+++ b/starter/static/css/main.css
@@ -41,6 +41,13 @@ body {
     margin: 0;
 }
 
+input {
+  border: 1px solid rgba(0, 0, 0, 0.4);
+  cursor: text;
+  background-color: white;
+  padding: 1px 0;
+}
+
 div.card {
     border: 1px solid rgba(0, 0, 0, .04);
     box-shadow: 0 1px 4px rgba(0, 0, 0, .03);
@@ -721,8 +728,8 @@ div.main-pane {
 }
 
 div.merged-task-container {
-    display: flex;
-    flex-grow: 1;
+    height: 100%;
+    overflow-y: auto;
 }
 
 div.right-pane {
@@ -732,8 +739,12 @@ div.right-pane {
 }
 
 /* Ad-hoc fixes for tasks */
+div.main-pane div.task-board {
+    height: 100%;
+}
+
 div.main-pane div.task-board div.full-column-container {
-    overflow-y: auto;
+    overflow-y: scroll;
 }
 
 /* Ad-hoc fixes for calendar */
