--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
     <script src="{% static "moment.min.js" %}"></script>
     <script src="{% static "react-markdown.js" %}"></script>
     <script src="{% static "react-router-dom.js" %}"></script>
+    <script src="{% static "dist/DragDropTouch.js" %}"></script>
     <script type="text/javascript" src="{% if debug %}{%  static "dist/dev/bundle.js" %}{% else %}{% static "dist/bundle.js" %}{% endif %}" charset="utf-8"></script>
     {% block content %}
     {% endblock content %}
