remove some friction when creating events

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -695,6 +695,9 @@ div.modal h3 {
 div.modal-container div.cancel-button-container {
     cursor: pointer;
     float: right;
+    padding: 10px;
+    margin-right: -10px;
+    margin-top: -10px;
 }
 
 div.modal label {
