--- a/static/css/main.css
+++ b/static/css/main.css
@@ -295,6 +295,17 @@ div.detail-container div.time-info {
     padding-top: .25em;
 }
 
+div.detail-container div.time-info div.chart-container {
+    display: flex;
+}
+
+div.detail-container div.time-info div.chart-container div:first-child {
+    flex-grow: .7;
+}
+
+/* This apparently stops the annoying flickering from google charts */
+svg > g > g:last-child { pointer-events: none }
+
 /* Task Detail view CSS */
 div.detail-container div.task-status {
     display: flex;
